k8s/base/network-policies/allow-web-egress-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-egress-api
  namespace: devops-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: web
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api
      ports:
        - protocol: TCP
          port: 8000
