k8s/base/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: devops-app
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
